# DataMiningProject

./: .gitignore  0 - download.py  1 - convert.ipynb  2 - analysis.ipynb  3 - preprocess.ipynb  4 - evaluation.ipynb  README.md  pyproject.toml
data/: slangs.py
datapy/: __init__.py
